# audio-processing

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: plot-sample.ipynb  rnn-file.ipynb  rnn-streaming-sim.ipynb  rnn-streaming.ipynb  stft-denoise.ipynb
src/: denoise-01.py  denoise-02.py
