[tool.poetry]
name = "audio-processing"
version = "0.1.0"
description = ""
authors = ["Your Name <jim.ellenberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.1"
matplotlib = "^3.6.1"
librosa = "^0.9.2"
scipy = "^1.9.3"
rnnoise-wrapper = {git = "https://github.com/jellenberger/RNNoise_Wrapper"}
PyAudio = "^0.2.12"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
